# NanoEngine

./: CMakeLists.txt  README.md  TODO
assets/scripts/: level1.lua  level2.lua  myscript.lua
cmake/: CPM.cmake
libs/imgui-1913/examples/example_android_opengl3/: CMakeLists.txt
libs/imgui-1913/examples/example_glfw_vulkan/: CMakeLists.txt
libs/imgui-1913/examples/example_glfw_wgpu/: CMakeLists.txt
src/: Engine.cpp  Engine.hpp  Game.cpp  Game.hpp  main.cpp
src/ECS/: ECS.cpp  ECS.hpp  Ecs_.cpp  Ecs_.hpp  _ECS.cpp  _ECS.hpp
src/assetStore/: AssetStore.cpp  AssetStore.hpp
src/common/: Commons.cpp  Commons.hpp  ImGuiLogWindow.cpp  ImGuiLogWindow.hpp  LevelLoader.cpp  LevelLoader.hpp  Logger.hpp  SpdlogLogger.hpp  TileMapLoader.cpp  TileMapLoader.hpp
src/components/: Animation.hpp  BoxColider.hpp  BoxCollider.hpp  CameraFollow.hpp  Common.hpp  Health.hpp  KeyboardControlled.hpp  Projectile.hpp  ProjectileEmitter.hpp  RigidBody.hpp  Script.hpp  Sprite.hpp  TextLabel.hpp  Transform.hpp
src/config/: Configuration.hpp
src/const/: Const.hpp
src/eventBus/: Event.hpp  EventBus.cpp  EventBus.hpp
src/events/: Collision.cpp  Collision.hpp  KeyPressedEvent.cpp  KeyPressedEvent.hpp
src/game/: Engine.cpp  Engine.hpp  Game.cpp  Game.hpp
src/systems/: Animation.cpp  Animation.hpp  CameraMovement.cpp  CameraMovement.hpp  Collision.cpp  Collision.hpp  Damage.cpp  Damage.hpp  HealthBar.cpp  HealthBar.hpp  KeyboardMovement.cpp  KeyboardMovement.hpp  Movement.cpp  Movement.hpp  ProjectileEmitter.cpp  ProjectileEmitter.hpp  ProjectileLifecycle.cpp  ProjectileLifecycle.hpp  Render.cpp  Render.hpp  RenderCollision.cpp  RenderCollision.hpp  RenderGUI.cpp  RenderGUI.hpp  RenderText.cpp  RenderText.hpp  Script.cpp  Script.hpp
src/timer/: Timer.cpp  Timer.hpp
